--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.anstice">
+    package="com.ourflettership.anstice">
+
+    <!-- 讀取相簿權限
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+-->
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/scale3"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.ourflettership.anstice.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,8 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddActivity" />
-        <activity android:name=".UpdateActivity"></activity>
+        <activity android:name="com.ourflettership.anstice.AddActivity" />
+        <activity android:name="com.ourflettership.anstice.UpdateActivity" />
+        <activity android:name="com.ourflettership.anstice.ChooseListActivity"></activity>
     </application>
 
 </manifest>
